--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "homepage": "https://github.com/Strider-CD/strider-github-status",
   "dependencies": {
     "debug": "~0.7.4",
-    "github": "~0.1.12",
-    "markdown-sections": "^1.0.2"
+    "github": "~0.1.12"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
